// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx4uyeb {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx4uyeb:focus,
.sx4uyeb:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx4uyeb:active,
.sx4uyeb:visited {
  color: var(--colors-primary500);
}

.sx4uyeb5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

<div>
  <a
    class="sx4uyeb sx4uyeb5dbgn--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx4uyeb {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx4uyeb:focus,
.sx4uyeb:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx4uyeb:active,
.sx4uyeb:visited {
  color: var(--colors-primary500);
}

.sx4uyeb5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sx4uyebn3mo2--size-lg {
  font-size: var(--fontSizes-lg);
  line-height: 1.52;
}

<div>
  <a
    class="sx4uyeb sx4uyebn3mo2--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
